Fix spacing among textareas and buttons in comment section.

--- a/css/modules/_buttons.scss
+++ b/css/modules/_buttons.scss
@@ -114,6 +114,8 @@
 }
 
 .btn-add-photo {
+  float: left;
+  
   &:hover {
     background-color: $lighter-gray;
     @include transition(all 200ms ease-out);
