--- a/css/partials/_comments.scss
+++ b/css/partials/_comments.scss
@@ -42,9 +42,10 @@
 
 .comment-container {
   clear: both;
+  padding-top: 10px;
+  margin-bottom: 15px;
 }
 
-.comment-box
-.comment-box {
+.comment-box .comment-box {
   margin-left: 25px;
 }
